; ModuleID = '/home/carl/AnghaBench/openssl/crypto/store/extr_loader_file.c_try_decode_PUBKEY.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/store/extr_loader_file.c_try_decode_PUBKEY.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PEM_STRING_PUBLIC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i8*, i8*, i64, i8**, i32*, i32*, i8*)* @try_decode_PUBKEY to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @try_decode_PUBKEY(i8* %0, i8* %1, i8* %2, i64 %3, i8** %4, i32* %5, i32* %6, i8* %7) #0 {
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i8**, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i8*, align 8
  %18 = alloca i32*, align 8
  %19 = alloca i32*, align 8
  store i8* %0, i8** %10, align 8
  store i8* %1, i8** %11, align 8
  store i8* %2, i8** %12, align 8
  store i64 %3, i64* %13, align 8
  store i8** %4, i8*** %14, align 8
  store i32* %5, i32** %15, align 8
  store i32* %6, i32** %16, align 8
  store i8* %7, i8** %17, align 8
  store i32* null, i32** %18, align 8
  store i32* null, i32** %19, align 8
  %20 = load i8*, i8** %10, align 8
  %21 = icmp ne i8* %20, null
  br i1 %21, label %22, label %30

22:                                               ; preds = %8
  %23 = load i8*, i8** %10, align 8
  %24 = load i32, i32* @PEM_STRING_PUBLIC, align 4
  %25 = call i64 @strcmp(i8* %23, i32 %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %22
  store i32* null, i32** %9, align 8
  br label %40

28:                                               ; preds = %22
  %29 = load i32*, i32** %15, align 8
  store i32 1, i32* %29, align 4
  br label %30

30:                                               ; preds = %28, %8
  %31 = load i64, i64* %13, align 8
  %32 = call i32* @d2i_PUBKEY(i32* null, i8** %12, i64 %31)
  store i32* %32, i32** %19, align 8
  %33 = icmp ne i32* %32, null
  br i1 %33, label %34, label %38

34:                                               ; preds = %30
  %35 = load i32*, i32** %15, align 8
  store i32 1, i32* %35, align 4
  %36 = load i32*, i32** %19, align 8
  %37 = call i32* @OSSL_STORE_INFO_new_PKEY(i32* %36)
  store i32* %37, i32** %18, align 8
  br label %38

38:                                               ; preds = %34, %30
  %39 = load i32*, i32** %18, align 8
  store i32* %39, i32** %9, align 8
  br label %40

40:                                               ; preds = %38, %27
  %41 = load i32*, i32** %9, align 8
  ret i32* %41
}

declare dso_local i64 @strcmp(i8*, i32) #1

declare dso_local i32* @d2i_PUBKEY(i32*, i8**, i64) #1

declare dso_local i32* @OSSL_STORE_INFO_new_PKEY(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
